# ZGLshapes

./: AUTHORS.md  CMakeLists.txt  README.md  tests.pro  z_base.h  z_qellipse.cpp  z_qellipse.h  z_qline.cpp  z_qline.h  z_qpoint.cpp  z_qpoint.h  z_qrect.cpp  z_qrect.h  z_qtri.cpp  z_qtri.h
include/: CMakeLists.txt  z_base.h  z_geometry_util.h  z_linalg.h  z_matrix.h  z_matrixtraits.h  z_offsetmatrix.h  z_qellipse.h  z_qline.h  z_qpoint.h  z_qrect.h  z_qtri.h
src/: CMakeLists.txt  z_qellipse.cpp  z_qline.cpp  z_qpoint.cpp  z_qrect.cpp  z_qtri.cpp
tests/: CMakeLists.txt  run-tests.cpp  run-tests.sh  test_macros.h.in  test_z_qtshapes.cpp
tests/base/: CMakeLists.txt  test_z_qtshapes_base.cpp
tests/linalg/: CMakeLists.txt  test_z_linalg.cpp  test_z_matrix.cpp  test_z_matrixtraits.cpp  test_z_offsetmatrix.cpp
tests/qellipse/: CMakeLists.txt  test_z_qtshapes_qellipse_1.cpp  test_z_qtshapes_qellipse_2.cpp  test_z_qtshapes_qellipse_3.cpp  test_z_qtshapes_qellipse_4.cpp  test_z_qtshapes_qellipse_5.cpp  test_z_qtshapes_qellipse_6.cpp  test_z_qtshapes_qellipse_7.cpp  test_z_qtshapes_qellipse_8.cpp  test_z_qtshapes_qellipse_9.cpp
tests/qellipsef/: CMakeLists.txt  test_z_qtshapes_qellipsef_1.cpp  test_z_qtshapes_qellipsef_2.cpp  test_z_qtshapes_qellipsef_3.cpp  test_z_qtshapes_qellipsef_4.cpp  test_z_qtshapes_qellipsef_5.cpp  test_z_qtshapes_qellipsef_6.cpp  test_z_qtshapes_qellipsef_7.cpp  test_z_qtshapes_qellipsef_8.cpp  test_z_qtshapes_qellipsef_9.cpp
tests/qline/: CMakeLists.txt  test_z_qtshapes_qline_1.cpp  test_z_qtshapes_qline_2.cpp  test_z_qtshapes_qline_3.cpp  test_z_qtshapes_qline_4.cpp  test_z_qtshapes_qline_5.cpp  test_z_qtshapes_qline_6.cpp  test_z_qtshapes_qline_7.cpp
tests/qlinef/: CMakeLists.txt  test_z_qtshapes_qlinef_1.cpp  test_z_qtshapes_qlinef_2.cpp  test_z_qtshapes_qlinef_3.cpp  test_z_qtshapes_qlinef_4.cpp  test_z_qtshapes_qlinef_5.cpp  test_z_qtshapes_qlinef_6.cpp  test_z_qtshapes_qlinef_7.cpp
tests/qpoint/: CMakeLists.txt  test_z_qtshapes_qpoint.cpp
tests/qpointf/: CMakeLists.txt  test_z_qtshapes_qpointf.cpp
tests/qrect/: CMakeLists.txt  test_z_qtshapes_qrect_1.cpp  test_z_qtshapes_qrect_2.cpp  test_z_qtshapes_qrect_3.cpp  test_z_qtshapes_qrect_4.cpp  test_z_qtshapes_qrect_5.cpp  test_z_qtshapes_qrect_6.cpp  test_z_qtshapes_qrect_7.cpp  test_z_qtshapes_qrect_8.cpp  test_z_qtshapes_qrect_9.cpp
tests/qrectf/: CMakeLists.txt  test_z_qtshapes_qrectf_1.cpp  test_z_qtshapes_qrectf_2.cpp  test_z_qtshapes_qrectf_3.cpp  test_z_qtshapes_qrectf_4.cpp  test_z_qtshapes_qrectf_5.cpp  test_z_qtshapes_qrectf_6.cpp  test_z_qtshapes_qrectf_7.cpp  test_z_qtshapes_qrectf_8.cpp  test_z_qtshapes_qrectf_9.cpp
tests/qtri/: CMakeLists.txt  test_z_qtshapes_qtri_1.cpp  test_z_qtshapes_qtri_2.cpp  test_z_qtshapes_qtri_3.cpp  test_z_qtshapes_qtri_4.cpp  test_z_qtshapes_qtri_5.cpp  test_z_qtshapes_qtri_6.cpp  test_z_qtshapes_qtri_7.cpp  test_z_qtshapes_qtri_8.cpp  test_z_qtshapes_qtri_9.cpp
tests/qtrif/: CMakeLists.txt  test_z_qtshapes_qtrif_1.cpp  test_z_qtshapes_qtrif_2.cpp  test_z_qtshapes_qtrif_3.cpp  test_z_qtshapes_qtrif_4.cpp  test_z_qtshapes_qtrif_5.cpp  test_z_qtshapes_qtrif_6.cpp  test_z_qtshapes_qtrif_7.cpp  test_z_qtshapes_qtrif_8.cpp  test_z_qtshapes_qtrif_9.cpp
