cmake_minimum_required(VERSION 3.1.0)

set(TEST_Z_QTSHAPES_BASE ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_base)

set(TEST_Z_QTSHAPES_QPOINT ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qpoint)

set(TEST_Z_QTSHAPES_QPOINTF ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qpointf)

set(TEST_Z_QTSHAPES_QLINE_1 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qline_1)
set(TEST_Z_QTSHAPES_QLINE_2 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qline_2)
set(TEST_Z_QTSHAPES_QLINE_3 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qline_3)
set(TEST_Z_QTSHAPES_QLINE_4 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qline_4)
set(TEST_Z_QTSHAPES_QLINE_5 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qline_5)
set(TEST_Z_QTSHAPES_QLINE_6 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qline_6)
set(TEST_Z_QTSHAPES_QLINE_7 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qline_7)

set(TEST_Z_QTSHAPES_QLINEF_1 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qlinef_1)
set(TEST_Z_QTSHAPES_QLINEF_2 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qlinef_2)
set(TEST_Z_QTSHAPES_QLINEF_3 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qlinef_3)
set(TEST_Z_QTSHAPES_QLINEF_4 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qlinef_4)
set(TEST_Z_QTSHAPES_QLINEF_5 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qlinef_5)
set(TEST_Z_QTSHAPES_QLINEF_6 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qlinef_6)
set(TEST_Z_QTSHAPES_QLINEF_7 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qlinef_7)

set(TEST_Z_QTSHAPES_QTRI_1 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtri_1)
set(TEST_Z_QTSHAPES_QTRI_2 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtri_2)
set(TEST_Z_QTSHAPES_QTRI_3 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtri_3)
set(TEST_Z_QTSHAPES_QTRI_4 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtri_4)
set(TEST_Z_QTSHAPES_QTRI_5 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtri_5)
set(TEST_Z_QTSHAPES_QTRI_6 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtri_6)
set(TEST_Z_QTSHAPES_QTRI_7 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtri_7)
set(TEST_Z_QTSHAPES_QTRI_8 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtri_8)
set(TEST_Z_QTSHAPES_QTRI_9 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtri_9)

set(TEST_Z_QTSHAPES_QTRIF_1 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtrif_1)
set(TEST_Z_QTSHAPES_QTRIF_2 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtrif_2)
set(TEST_Z_QTSHAPES_QTRIF_3 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtrif_3)
set(TEST_Z_QTSHAPES_QTRIF_4 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtrif_4)
set(TEST_Z_QTSHAPES_QTRIF_5 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtrif_5)
set(TEST_Z_QTSHAPES_QTRIF_6 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtrif_6)
set(TEST_Z_QTSHAPES_QTRIF_7 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtrif_7)
set(TEST_Z_QTSHAPES_QTRIF_8 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtrif_8)
set(TEST_Z_QTSHAPES_QTRIF_9 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qtrif_9)

set(TEST_Z_QTSHAPES_QRECT_1 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrect_1)
set(TEST_Z_QTSHAPES_QRECT_2 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrect_2)
set(TEST_Z_QTSHAPES_QRECT_3 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrect_3)
set(TEST_Z_QTSHAPES_QRECT_4 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrect_4)
set(TEST_Z_QTSHAPES_QRECT_5 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrect_5)
set(TEST_Z_QTSHAPES_QRECT_6 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrect_6)
set(TEST_Z_QTSHAPES_QRECT_7 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrect_7)
set(TEST_Z_QTSHAPES_QRECT_8 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrect_8)
set(TEST_Z_QTSHAPES_QRECT_9 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrect_9)

set(TEST_Z_QTSHAPES_QRECTF_1 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrectf_1)
set(TEST_Z_QTSHAPES_QRECTF_2 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrectf_2)
set(TEST_Z_QTSHAPES_QRECTF_3 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrectf_3)
set(TEST_Z_QTSHAPES_QRECTF_4 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrectf_4)
set(TEST_Z_QTSHAPES_QRECTF_5 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrectf_5)
set(TEST_Z_QTSHAPES_QRECTF_6 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrectf_6)
set(TEST_Z_QTSHAPES_QRECTF_7 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrectf_7)
set(TEST_Z_QTSHAPES_QRECTF_8 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrectf_8)
set(TEST_Z_QTSHAPES_QRECTF_9 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qrectf_9)

set(TEST_Z_QTSHAPES_QELLIPSE_1 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipse_1)
set(TEST_Z_QTSHAPES_QELLIPSE_2 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipse_2)
set(TEST_Z_QTSHAPES_QELLIPSE_3 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipse_3)
set(TEST_Z_QTSHAPES_QELLIPSE_4 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipse_4)
set(TEST_Z_QTSHAPES_QELLIPSE_5 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipse_5)
set(TEST_Z_QTSHAPES_QELLIPSE_6 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipse_6)
set(TEST_Z_QTSHAPES_QELLIPSE_7 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipse_7)
set(TEST_Z_QTSHAPES_QELLIPSE_8 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipse_8)
set(TEST_Z_QTSHAPES_QELLIPSE_9 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipse_9)

set(TEST_Z_QTSHAPES_QELLIPSEF_1 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipsef_1)
set(TEST_Z_QTSHAPES_QELLIPSEF_2 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipsef_2)
set(TEST_Z_QTSHAPES_QELLIPSEF_3 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipsef_3)
set(TEST_Z_QTSHAPES_QELLIPSEF_4 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipsef_4)
set(TEST_Z_QTSHAPES_QELLIPSEF_5 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipsef_5)
set(TEST_Z_QTSHAPES_QELLIPSEF_6 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipsef_6)
set(TEST_Z_QTSHAPES_QELLIPSEF_7 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipsef_7)
set(TEST_Z_QTSHAPES_QELLIPSEF_8 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipsef_8)
set(TEST_Z_QTSHAPES_QELLIPSEF_9 ${CMAKE_CURRENT_LIST_DIR}/test_z_qtshapes_qellipsef_9)


# Due to CMake limitations you must remove the run-tests.sh file after updating this list
# before building again, or the new list will not be written to the file.
list(APPEND ZGLshapes_TESTS
    "#!/bin/bash\n"
    "${TEST_Z_QTSHAPES_BASE} \$@\n"
    "${TEST_Z_QTSHAPES_QPOINT} \$@\n"
    "${TEST_Z_QTSHAPES_QPOINTF} \$@\n"
    "${TEST_Z_QTSHAPES_QLINE_1} \$@\n"
    "${TEST_Z_QTSHAPES_QLINE_2} \$@\n"
    "${TEST_Z_QTSHAPES_QLINE_3} \$@\n"
    "${TEST_Z_QTSHAPES_QLINE_4} \$@\n"
    "${TEST_Z_QTSHAPES_QLINE_5} \$@\n"
    "${TEST_Z_QTSHAPES_QLINE_6} \$@\n"
    "${TEST_Z_QTSHAPES_QLINE_7} \$@\n"
    "${TEST_Z_QTSHAPES_QLINEF_1} \$@\n"
    "${TEST_Z_QTSHAPES_QLINEF_2} \$@\n"
    "${TEST_Z_QTSHAPES_QLINEF_3} \$@\n"
    "${TEST_Z_QTSHAPES_QLINEF_4} \$@\n"
    "${TEST_Z_QTSHAPES_QLINEF_5} \$@\n"
    "${TEST_Z_QTSHAPES_QLINEF_6} \$@\n"
    "${TEST_Z_QTSHAPES_QLINEF_7} \$@\n"
    "${TEST_Z_QTSHAPES_QTRI_1} \$@\n"
    "${TEST_Z_QTSHAPES_QTRI_2} \$@\n"
    "${TEST_Z_QTSHAPES_QTRI_3} \$@\n"
    "${TEST_Z_QTSHAPES_QTRI_4} \$@\n"
    "${TEST_Z_QTSHAPES_QTRI_5} \$@\n"
    "${TEST_Z_QTSHAPES_QTRI_6} \$@\n"
    "${TEST_Z_QTSHAPES_QTRI_7} \$@\n"
    "${TEST_Z_QTSHAPES_QTRI_8} \$@\n"
    "${TEST_Z_QTSHAPES_QTRI_9} \$@\n"
    "${TEST_Z_QTSHAPES_QTRIF_1} \$@\n"
    "${TEST_Z_QTSHAPES_QTRIF_2} \$@\n"
    "${TEST_Z_QTSHAPES_QTRIF_3} \$@\n"
    "${TEST_Z_QTSHAPES_QTRIF_4} \$@\n"
    "${TEST_Z_QTSHAPES_QTRIF_5} \$@\n"
    "${TEST_Z_QTSHAPES_QTRIF_6} \$@\n"
    "${TEST_Z_QTSHAPES_QTRIF_7} \$@\n"
    "${TEST_Z_QTSHAPES_QTRIF_8} \$@\n"
    "${TEST_Z_QTSHAPES_QTRIF_9} \$@\n"
    "${TEST_Z_QTSHAPES_QRECT_1} \$@\n"
    "${TEST_Z_QTSHAPES_QRECT_2} \$@\n"
    "${TEST_Z_QTSHAPES_QRECT_3} \$@\n"
    "${TEST_Z_QTSHAPES_QRECT_4} \$@\n"
    "${TEST_Z_QTSHAPES_QRECT_5} \$@\n"
    "${TEST_Z_QTSHAPES_QRECT_6} \$@\n"
    "${TEST_Z_QTSHAPES_QRECT_7} \$@\n"
    "${TEST_Z_QTSHAPES_QRECT_8} \$@\n"
    "${TEST_Z_QTSHAPES_QRECT_9} \$@\n"
    "${TEST_Z_QTSHAPES_QRECTF_1} \$@\n"
    "${TEST_Z_QTSHAPES_QRECTF_2} \$@\n"
    "${TEST_Z_QTSHAPES_QRECTF_3} \$@\n"
    "${TEST_Z_QTSHAPES_QRECTF_4} \$@\n"
    "${TEST_Z_QTSHAPES_QRECTF_5} \$@\n"
    "${TEST_Z_QTSHAPES_QRECTF_6} \$@\n"
    "${TEST_Z_QTSHAPES_QRECTF_7} \$@\n"
    "${TEST_Z_QTSHAPES_QRECTF_8} \$@\n"
    "${TEST_Z_QTSHAPES_QRECTF_9} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSE_1} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSE_2} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSE_3} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSE_4} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSE_5} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSE_6} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSE_7} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSE_8} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSE_9} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSEF_1} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSEF_2} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSEF_3} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSEF_4} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSEF_5} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSEF_6} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSEF_7} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSEF_8} \$@\n"
    "${TEST_Z_QTSHAPES_QELLIPSEF_9} \$@\n"
)

# Run generated file using "bash -c run-tests.sh"
file(WRITE "run-tests.sh" ${ZGLshapes_TESTS})

add_subdirectory(base)
add_subdirectory(qpoint)
add_subdirectory(qpointf)
add_subdirectory(qline)
add_subdirectory(qlinef)
add_subdirectory(qtri)
add_subdirectory(qtrif)
add_subdirectory(qrect)
add_subdirectory(qrectf)
add_subdirectory(qellipse)
add_subdirectory(qellipsef)
