cmake_minimum_required(VERSION 3.1.0)

configure_file( test_macros.h.in ${CMAKE_BINARY_DIR}/generated/test_macros.h )
include_directories( ${CMAKE_BINARY_DIR}/generated/ ) # Make sure it can be included..

SET(TEST_LINALG false CACHE BOOL "Enable linalg tests")
SET(TEST_BASE false CACHE BOOL "Enable base tests")
SET(TEST_QPOINT false CACHE BOOL "Enable qpoint tests")
SET(TEST_QPOINTF false CACHE BOOL "Enable qpointf tests")
SET(TEST_QLINE false CACHE BOOL "Enable qline tests")
SET(TEST_QLINEF false CACHE BOOL "Enable qlinef tests")
SET(TEST_QTRI false CACHE BOOL "Enable qtri tests")
SET(TEST_QTRIF false CACHE BOOL "Enable qtrif tests")
SET(TEST_QRECT false CACHE BOOL "Enable qrect tests")
SET(TEST_QRECTF false CACHE BOOL "Enable qrectf tests")
SET(TEST_QELLIPSE false CACHE BOOL "Enable qellipse tests")
SET(TEST_QELLIPSEF false CACHE BOOL "Enable qellipsef tests")

if (ALL_TESTS)
message("Enabling all tests")
add_executable(run-tests run-tests.cpp)

add_subdirectory(linalg)
add_subdirectory(base)
add_subdirectory(qpoint)
add_subdirectory(qpointf)
add_subdirectory(qline)
add_subdirectory(qlinef)
add_subdirectory(qtri)
add_subdirectory(qtrif)
add_subdirectory(qrect)
add_subdirectory(qrectf)
add_subdirectory(qellipse)
add_subdirectory(qellipsef)
else()

    add_executable(run-tests run-tests.cpp)
    if (TEST_LINALG)
        message("Enabling linalg tests")
        add_subdirectory(linalg)
    endif()
    if (TEST_BASE)
        message("Enabling base tests")
        add_subdirectory(base)
    endif()
    if (TEST_QPOINT)
        message("Enabling qpoint tests")
        add_subdirectory(qpoint)
    endif()
    if (TEST_QPOINTF)
        message("Enabling qpointf tests")
        add_subdirectory(qpointf)
    endif()
    if (TEST_QLINE)
        message("Enabling qline tests")
        add_subdirectory(qline)
    endif()
    if (TEST_QLINEF)
        message("Enabling qlinef tests")
        add_subdirectory(qlinef)
    endif()
    if (TEST_QTRI)
        message("Enabling qtri tests")
        add_subdirectory(qtri)
    endif()
    if (TEST_QTRIF)
        message("Enabling qtrif tests")
        add_subdirectory(qtrif)
    endif()
    if (TEST_QRECT)
        message("Enabling qrect tests")
        add_subdirectory(qrect)
    endif()
    if (TEST_QRECTF)
        message("Enabling qrectf tests")
    add_subdirectory(qrectf)
    endif()
    if (TEST_QELLIPSE)
        message("Enabling qellipse tests")
        add_subdirectory(qellipse)
    endif()
    if (TEST_QELLIPSEF)
        message("Enabling qellipsef tests")
        add_subdirectory(qellipsef)
    endif()
endif()
